adjusting src of archives

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" type="text/css" href="
-    ../css/style.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="
+    ./css/style.css"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevLinks</title>
@@ -18,7 +22,7 @@
     <div id="container">
       <div id="profile">
         <img
-          src="../assets/assets/avatar.png"
+          src="./assets/assets/avatar.png"
           alt="Foto de Mayk Brito sorrindo, usando ôculos e camisa preta, barba e fundo amarelo."
         />
         <p>@carllos_kauan</p>
@@ -74,6 +78,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
